Fixed collapsing logic for small viewports.

--- a/SleepTracker/public/css/sidebarstyle.css
+++ b/SleepTracker/public/css/sidebarstyle.css
@@ -82,8 +82,8 @@ a:focus {
 }
 
 #sidebar ul.components {
-    padding: 50px 20px 50px 50px;
-    border-right: 1px solid #ffffff;
+    padding: 20px 20px 50px 50px;
+    /*border-right: 1px solid #ffffff;*/
 }
 
 #sidebar ul p {
@@ -148,7 +148,7 @@ ul.CTAs a {
     min-height: 100vh;
     transition: all 0.3s;
     position: absolute;
-    top: 150px;
+    top: 80px;
     right: 0;
 }
 
